# Accelerator

./: README.md  instagram_playbook.txt
outskill-ai-lab-projects/: dummy.env  pyproject.toml
outskill-ai-lab-projects/.cursor/rules/: agentic_design_patterns.mdc  env.mdc
outskill-ai-lab-projects/projects/aiops_incident_response_agent/: CODE.md  README.md  main.py
outskill-ai-lab-projects/projects/aiops_incident_response_agent/agents/: metrics_analyzer.py  root_cause_analyzer.py  triage.py
outskill-ai-lab-projects/projects/aiops_incident_response_agent/api/: __init__.py  app.py
outskill-ai-lab-projects/projects/aiops_incident_response_agent/frontend/: index.html  package-lock.json  vite.config.ts
outskill-ai-lab-projects/projects/aiops_incident_response_agent/guardrails/: remediation_safety.py
outskill-ai-lab-projects/projects/aiops_incident_response_agent/models/: remediation.py
outskill-ai-lab-projects/projects/aiops_incident_response_agent/simulators/: log_simulator.py  scenario_engine.py  trace_simulator.py
outskill-ai-lab-projects/projects/aiops_incident_response_agent/tools/: alert_tools.py  metrics_tools.py  notification_tools.py  trace_tools.py  (+1 more)
outskill-ai-lab-projects/projects/browser_automation_agent/: CODE.md  README.md  __init__.py  main.py
outskill-ai-lab-projects/projects/customer_support_agent/: README.md  __init__.py  main.py
outskill-ai-lab-projects/projects/cybersecurity_threat_detection_agent/: ARCHITECTURE.md  CODE.md  README.md
outskill-ai-lab-projects/projects/deep_research_agent/: ARCHITECTURE.md  CODE.md  README.md  main.py
(+204 files in other folders)
