[project]
name = "outskill-ai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.0",
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.115.0",
    "feedparser>=6.0.12",
    "isort>=7.0.0",
    "openai-agents>=0.6.5",
    "python-dotenv>=1.2.1",
    "sse-starlette>=2.2.1",
    "stagehand>=3.5.0",
    "tavily-python>=0.7.17",
    "uvicorn[standard]>=0.34.0",
    "wikipedia-api>=0.9.0",
    "youtube-transcript-api>=1.2.4",
]
